[Mongo] Connection Established

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,3 +9,8 @@ spring:
     url: jdbc:postgresql://localhost:5432/postgres
     username: postgres
     password: postgres
+  data:
+    mongodb:
+      host: localhost
+      port: 27017
+      database: talk-e
